...
            label.font = UIFont.boldSystemFont(ofSize: 20.0)
        }

    private lazy var postTitleLabel = UILabel()
        .with { label in
            label.numberOfLines = 3
            label.accessibilityIdentifier = "postDetails.title"

        }

    private lazy var postDescriptionLabel = UILabel()
        .with { label in
            label.numberOfLines = 0
...
