...
        tableView.register(PostDescriptionTableViewCell.self, forCellReuseIdentifier: descriptionCellIdentifier )
        tableView.register(PostUserTableViewCell.self, forCellReuseIdentifier: userCellIdentifier)
        tableView.register(PostCommentTableViewCell.self, forCellReuseIdentifier: commentCellIdentifier)
        tableView.estimatedRowHeight = 50
        tableView.rowHeight = UITableView.automaticDimension
        tableView.separatorStyle = .none
        tableView.accessibilityIdentifier = "postDetails.tableView"

        setupBindings()
    }

    func setupBindings() {

...
